# HSE_MC_CPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: bw_color.h  bw_matrix.h  circle.h  color.h  matrix.h  rectangle.h  rgb_color.h  rgb_matrix.h  shape.h  triangle.h
src/: bw_matrix.cpp  circle.cpp  matrix.cpp  rectangle.cpp  rgb_matrix.cpp  triangle.cpp
